# err-lu

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: dispatch.yml  static.yml
benches/: wasm.rs
pkg/: err_cat.js  err_cat_bg.wasm  index.html
src/: lib.rs
