[package]
name = "err-cat"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm"]
wasm = ["wasm-bindgen"]

[dependencies]
anyhow = "1.0.86"
serde = { version = "1.0.204", features = ["derive"] }
bincode = "1.3.3"
wasm-bindgen = { version = "0.2.86", optional = true }

[build-dependencies]
anyhow = "1.0.86"
csv = "1.3.0"
serde = { version = "1.0.204", features = ["derive"] }
bincode = "1.3.3"
